--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -9,7 +9,6 @@
   position: fixed;
   width: 1500px;
   z-index: 99999;
-
 }
 
 .app-name {
@@ -17,6 +16,9 @@
   margin-left: 50px;
   font-size: 22px;
   font-weight: bold;
+  color: inherit;
+  text-decoration: none;
+  cursor: pointer;
   cursor: pointer;
   text-shadow: -2px 2px 0px rgba(0, 134, 110, 0.5);
 }
